--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
       </form>
   </div>
 
+  <div class="modal-wrapper">
+    <div class="modal card">
+      <h2 class="title">
+        <button
+        class="close">
+      <img src="assets/close.svg" alt="imagem para fechar o popup">
+    </button>
+        
+        Seu IMC é de 20</h2>
+    </div>
+  </div>
+
   </main>
 </body>
 
