--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <script src="main.js" defer> </script>
 </head>
 <body>
+
+    <div class="alert-error">
+      Digite somente números
+    </div>
+
   <div class="container">
     <main class="card">
       <form>
@@ -50,7 +55,8 @@
       <img src="assets/close.svg" alt="imagem para fechar o popup">
     </button>
         
-        Seu IMC é de 20</h2>
+      <span>Seu IMC é de 20</span>  
+      </h2>
     </div>
   </div>
 
